[project]
name = "investigator_agent"
version = "0.1.0"
description = "Quick Two Sub-Agent Architecture with Tools"
authors = [
    {name = "George Rooney", email = "georgerooney@google.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.21.0",
]

[project.optional-dependencies]
deployment = [
    "absl-py>=2.3.1",
]

# The build system is updated to use hatchling, a standard build backend.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"